# opengl_Learn

./: .gitignore  .gitmodules  CMakeLists.txt
include/glad/: glad.h
src/: BasicMesh.cpp  Model.cpp  Texture.cpp  callBack.cpp  cube.cpp  glad.c  imguiT.cpp  main.cpp  project_init.cpp  shader.cpp  tools.cpp
src/include/: BasicMesh.hpp  Model.hpp  assert_vertex.h  callBack.h  camera.h  imguiT.h  mesh.hpp  model.hpp  project_init.h  shader.h  texture.h  tools.h
src/include/shape/: cube.h
src/shader/: vertex.glsl
src/shader/light/: fragment.glsl  fragment_lights.glsl  fragment_texture.glsl  lighting.glsl  vertex.glsl  vertex_light.glsl
src/shader/texture1/: frag.glsl  vertex.glsl
